# The unit tests use gtest
INCLUDE_DIRECTORIES(AFTER ${gtest_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(atomic)
ADD_SUBDIRECTORY(backtrace)
ADD_SUBDIRECTORY(base64)
ADD_SUBDIRECTORY(checked_snprintf)
ADD_SUBDIRECTORY(cjson)
ADD_SUBDIRECTORY(compression)
ADD_SUBDIRECTORY(crc32)
ADD_SUBDIRECTORY(dirutils)
ADD_SUBDIRECTORY(gethrtime)
ADD_SUBDIRECTORY(gettimeofday)
ADD_SUBDIRECTORY(getopt)
ADD_SUBDIRECTORY(histogram)
ADD_SUBDIRECTORY(json_checker)
ADD_SUBDIRECTORY(memorymap)
ADD_SUBDIRECTORY(mktemp)
ADD_SUBDIRECTORY(processclock)
ADD_SUBDIRECTORY(random)
ADD_SUBDIRECTORY(ring_buffer)
ADD_SUBDIRECTORY(sized_buffer)
ADD_SUBDIRECTORY(strings)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(timeutils)
