ADD_SUBDIRECTORY(arena_malloc)
ADD_SUBDIRECTORY(atomic)
ADD_SUBDIRECTORY(backtrace)
ADD_SUBDIRECTORY(base64)
ADD_SUBDIRECTORY(bitset)
ADD_SUBDIRECTORY(checked_snprintf)
ADD_SUBDIRECTORY(corestore)
ADD_SUBDIRECTORY(crc32)
ADD_SUBDIRECTORY(dirutils)
ADD_SUBDIRECTORY(gettimeofday)
ADD_SUBDIRECTORY(getopt)
ADD_SUBDIRECTORY(histogram)
ADD_SUBDIRECTORY(integer)
ADD_SUBDIRECTORY(interrupt)
ADD_SUBDIRECTORY(json_checker)
ADD_SUBDIRECTORY(optional)
ADD_SUBDIRECTORY(processclock)
ADD_SUBDIRECTORY(random)
ADD_SUBDIRECTORY(ring_buffer)
ADD_SUBDIRECTORY(rwlock)
ADD_SUBDIRECTORY(semaphore)
ADD_SUBDIRECTORY(strings)
ADD_SUBDIRECTORY(sysinfo)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(timers)
ADD_SUBDIRECTORY(timeutils)
ADD_SUBDIRECTORY(uuid)
